--- a/style.css
+++ b/style.css
@@ -1,17 +1,105 @@
 body{
+    background-color: rgb(138, 138, 138); 
     font-family: 'Courier New', Courier, monospace;
     font-size: 20pt; 
+    margin: 0;
+    padding: 0; 
+}
+.top{
+    background-color: rgb(87, 87, 87); 
+    margin: 0;
+    height: 30px;
+    padding: 10px; 
+}
+.controls{ 
+    background-color: rgb(34, 34, 34); 
+    float: left; 
+    height: 70px;
+    margin: 0 10px 0 0;
+}
+@media only screen and (max-width:980px) {
+    .controls{
+       width: 100%; 
+       margin: 0 0 5px 0;
+    }
+    ul{
+        display: flex; 
+        justify-content: space-between; 
+        padding: 10px; 
+    }
+}
+button{
+    border: none; 
+    background-color: rgb(34, 34, 34); 
+    color: white; 
+    text-align: center; 
+    text-decoration: none; 
+    font-size: 10pt; 
+    width: 100%; 
+    height: 70px; 
+    margin: 0; 
+    padding: 5px; 
+}
+button:hover{
+    background-color: rgb(92, 92, 92); 
+    border: none; 
+}
+button .active{
+    border: none; 
 }
 section{
     float: left; 
 }
+.inputs{
+    width: 100%; 
+    padding: 10px; 
+}
+textarea{
+    display: flexbox; 
+    flex-wrap: wrap; 
+    justify-content: center; 
+    align-items: stretch; 
+    align-content: space-between; 
+    border: none; 
+    resize: none; 
+    width: 44%; 
+    background-color: rgba(206, 206, 182, 0.445); 
+    overflow: hidden;
+    box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
+}
+.outputs{
+    width: 98%; 
+    justify-content: center; 
+}
 table{
-    border-collapse: collapse;
-    width: auto; 
-    height: auto;
+    width: 290px; 
+    height: 290px; 
+    display: flexbox; 
+    flex-wrap: wrap;   
+    align-content: space-between; 
+}
+#outputA{
+    background-color: rgb(0, 255, 42); 
+    overflow: hidden;
+    box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
+}
+#outputB{ 
+    background-color: rgb(255, 0, 0); 
+    overflow: hidden;
+    box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
+}
+#outputAB{
+    background-color: rgb(55, 0, 255); 
+    overflow: hidden;
+    box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
 }
 td{ 
-    font-size: 5pt; 
+    font-size: 20pt; 
     margin: 0;
     padding: 0;
+}
+ul{
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
 }
