--- a/style.css
+++ b/style.css
@@ -1,31 +1,62 @@
 body{
     background-color: rgb(138, 138, 138); 
     font-family: 'Courier New', Courier, monospace;
-    font-size: 20pt; 
     margin: 0;
     padding: 0; 
 }
 .top{
     background-color: rgb(87, 87, 87); 
     margin: 0;
-    height: 30px;
-    padding: 10px; 
+    height: 50px;
+    padding: 0; 
+}
+#logo{
+    height: 40px;
+    padding: 10px 0 0 10px; 
+    margin: 0; 
+    color: white; 
+    width: 12%;
+    float: left;
+    border-radius: 5px; 
+    background-color: black; 
+}
+#statistics{
+    height: 50px;
+    width: 80%; 
+    padding: 0; 
+    margin: 0; 
+    float: right; 
+    font-size: 16px; 
+    font-family: Arial, Helvetica, sans-serif; 
+    align-content: flex-start; 
 }
 .controls{ 
+    position: relative;
     background-color: rgb(34, 34, 34); 
-    float: left; 
+    float: right; 
     height: 70px;
     margin: 0 10px 0 0;
+    padding: 0; 
 }
 @media only screen and (max-width:980px) {
     .controls{
        width: 100%; 
-       margin: 0 0 5px 0;
+       margin: 0; 
     }
     ul{
         display: flex; 
         justify-content: space-between; 
-        padding: 10px; 
+    }
+    #logo{
+        width: 32%;
+    }
+    #statistics{
+        width: 64%; 
+    }
+    article{
+        width: 100%; 
+        float: left; 
+        padding: 2px; 
     }
 }
 button{
@@ -34,11 +65,11 @@ button{
     color: white; 
     text-align: center; 
     text-decoration: none; 
-    font-size: 10pt; 
+    font-size: 8pt; 
     width: 100%; 
     height: 70px; 
     margin: 0; 
-    padding: 5px; 
+    padding: 4px; 
 }
 button:hover{
     background-color: rgb(92, 92, 92); 
@@ -46,13 +77,18 @@ button:hover{
 }
 button .active{
     border: none; 
+    background-color: cadetblue; 
 }
-section{
+article{
+    width: 100%; 
     float: left; 
 }
 .inputs{
-    width: 100%; 
-    padding: 10px; 
+    width: 44%;
+    margin: 5px; 
+}
+#legend{
+    font-size: 8pt; 
 }
 textarea{
     display: flexbox; 
@@ -62,14 +98,19 @@ textarea{
     align-content: space-between; 
     border: none; 
     resize: none; 
-    width: 44%; 
+    width: 100%; 
     background-color: rgba(206, 206, 182, 0.445); 
     overflow: hidden;
     box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
+    text-align: justify; 
 }
 .outputs{
     width: 98%; 
     justify-content: center; 
+}
+#counter1, #counter2{
+    font-size: 7pt; 
+    float: right; 
 }
 table{
     width: 290px; 
@@ -77,6 +118,7 @@ table{
     display: flexbox; 
     flex-wrap: wrap;   
     align-content: space-between; 
+    float: left; 
 }
 #outputA{
     background-color: rgb(0, 255, 42); 
@@ -94,7 +136,7 @@ table{
     box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
 }
 td{ 
-    font-size: 20pt; 
+    font-size: 12pt; 
     margin: 0;
     padding: 0;
 }
@@ -102,4 +144,5 @@ ul{
     list-style: none; 
     padding: 0; 
     margin: 0; 
+    flex: left; 
 }
