--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ body{
     font-family: Arial, Helvetica, sans-serif; 
     align-content: flex-start; 
 }
+#box{
+    height: 50px;
+    text-align: justify; 
+    padding-top: 5px; 
+}
 .controls{ 
     position: relative;
     background-color: rgb(34, 34, 34); 
