--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 #statistics{
     height: 50px;
     width: 80%; 
-    padding: 0; 
+    padding: 5px 0 0 0; 
     margin: 0; 
     float: right; 
     font-size: 16px; 
