--- a/style.css
+++ b/style.css
@@ -118,6 +118,18 @@ textarea{
     float: right; 
 }
 table{
+    width: 100%; 
+    height: 100%; 
+}
+#outputA{
+    box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
+    width: 290px; 
+    height: 290px; 
+    display: flexbox; 
+    float: left; 
+}
+#outputB{ 
+    box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
     width: 290px; 
     height: 290px; 
     display: flexbox; 
@@ -125,25 +137,14 @@ table{
     align-content: space-between; 
     float: left; 
 }
-#outputA{
-    background-color: rgb(0, 255, 42); 
-    overflow: hidden;
-    box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
-}
-#outputB{ 
-    background-color: rgb(255, 0, 0); 
-    overflow: hidden;
-    box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
-}
 #outputAB{
-    background-color: rgb(55, 0, 255); 
-    overflow: hidden;
     box-shadow: 2px 2px rgba(48, 48, 48, 0.404); 
-}
-td{ 
-    font-size: 12pt; 
-    margin: 0;
-    padding: 0;
+    width: 290px; 
+    height: 290px; 
+    display: flexbox; 
+    flex-wrap: wrap;   
+    align-content: space-between; 
+    float: left; 
 }
 ul{
     list-style: none; 
